--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,6 +27,9 @@
 <ul>
     {{ macro.displayMovieList(now_showing)}}
 </ul>
+<ul>
+    {{ macro.displayMovieList(top_rated)}}
+</ul>
 
 
 {% endblock%}
